#1 created scrollbar, fix js, fix scrollbar.scss

--- a/source/scss/blocks/main.scss
+++ b/source/scss/blocks/main.scss
@@ -258,8 +258,6 @@
 
       .bottom {
         z-index: 10;
-        overflow: hidden;
-        overflow-y: auto;
         height: 230px;
         background: #fff;
 
